--- a/practice/index.html
+++ b/practice/index.html
@@ -37,6 +37,11 @@
           </div>
         </div>
       </div>
+      <form action="" class="flex justify-center m-5 gap-3">
+      <input type="number" name="increment" placeholder="increment" id="increment-value">  
+      <input type="number" name="decrement" placeholder="decrement" id="decrement-value">  
+      </form>
+      </form>
     </div>
 
     <script src="./script.js"></script>
